changed the logo size and text

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 	<title>NCX Cryptocurrency - Coming Soon</title>
 
-    <link rel="icon" type="image/x-icon" href="assets/img/icon.ico">
+    <link rel="icon" type="image/x-icon" href="assets/img/ncx.ico">
 
 </head>
 <body class="has-loading-screen ts-theme-light">
@@ -29,7 +29,7 @@
             <header id="header">
                 <nav class="navbar navbar-light ts-separate-bg-element">
                     <a class="navbar-brand" href="#">
-                        <img src="assets/img/logo-d.png" alt="NCX Logo">
+                        <img src="assets/img/logo-e.png" alt="NCX Logo">
                     </a>
                     <!--end navbar-brand-->
                     <button class="navbar-toggler ts-open-side-panel" type="button" aria-label="Toggle navigation">
@@ -47,9 +47,9 @@
                     <div class="row">
                         <!--Page Title-->
                         <div class="col-md-6">
-                            <h1 style="color: #fff;">NCX Cryptocurrency Exchange</h1>
-                            <p style="color: #fff; font-size: 26px;">
-                                Launching in over 35 Countries
+                            <h1 style="color: #fff;">NCX Exchange</h1>
+                            <p style="color: #fff; font-size: 26px; line-height: 2.6875rem;">
+                                Cryptocurrency Exchange launching on 22/03/22 in over 35 Countries
                             </p>
                             <form class="ts-form ts-form-email" data-php-path="assets/php/email.php">
                                 <div class="row">
@@ -90,10 +90,10 @@
                 <div class="clearfix py-4">
                     <div class="float-none float-sm-left">
                         <div class="ts-social-icons">
-                            <a href="#" class="fab fa-facebook"></a>
+                            <!-- <a href="#" class="fab fa-facebook"></a>
                             <a href="#" class="fab fa-twitter"></a>
-                            <a href="#" class="fab fa-linkedin"></a>
-                            <a href="#" class="fab fa-instagram"></a>
+                            <a href="#" class="fab fa-linkedin"></a> -->
+                            <a href="https://www.instagram.com/ncx.cx/" class="fab fa-instagram"></a>
                         </div>
                     </div>
                     <!--end social-icons-->
@@ -132,9 +132,7 @@
                 </div>
                 <!--end ts-title-->
                 <p>
-                    Uis commodo arcu at egestas vehicula. Maecenas auctor sagittis nulla laoreet vestibulum.
-                    Vivamus congue diam blandit quam efficitur, vel mattis lacus feugiat. Integer tempus interdum felis,
-                    ut luctus nunc.
+                    NCX Exchange. Cryptocurrency Exchange launching on 22/03/22 in over 35 Countries
                 </p>
                 <!--  -->
                 <!--end row-->
