changed the about text

--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
                     <h2 style="color: #fff;">About Us</h2>
                 </div>
                 <!--end ts-title-->
-                <p>
-                    NCX Exchange. Cryptocurrency Exchange launching on 22/03/22 in over 35 Countries
+                <p style="text-align: justify;">
+                    NCX is an International Cryptocurrency Exchange building a platform without digital walls and complex barriers. A platform that empowers you to see new possibilities for your Digital Assets and ranges a full range of solutions to Buy/Sell/Trade/Exchange/Stake Digital Assets.
                 </p>
                 <!--  -->
                 <!--end row-->
