changed the quality of the logo

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <header id="header">
                 <nav class="navbar navbar-light ts-separate-bg-element">
                     <a class="navbar-brand" href="#">
-                        <img src="assets/img/logo-e.png" alt="NCX Logo">
+                        <img src="assets/img/logo-a.png" alt="NCX Logo">
                     </a>
                     <!--end navbar-brand-->
                     <button class="navbar-toggler ts-open-side-panel" type="button" aria-label="Toggle navigation">
@@ -49,7 +49,7 @@
                         <div class="col-md-6">
                             <h1 style="color: #fff;">NCX Exchange</h1>
                             <p style="color: #fff; font-size: 26px; line-height: 2.6875rem;">
-                                Cryptocurrency Exchange launching on 22/03/22 in over 35 Countries
+                                International Cryptocurrency Exchange launching in over 35 Countries
                             </p>
                             <form class="ts-form ts-form-email" data-php-path="assets/php/email.php">
                                 <div class="row">
