correctly typed the spelling of ukraine

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                     </div>
                     <!--end col-md-2-->
                     <div class="col-md-2">
-                        <p>Ukrain</p>
+                        <p>Ukraine</p>
                     </div>
                     <!--end col-md-2-->
                     <div class="col-md-2">
